# Selenium_testing

./: 25_4_test.py  conftest.py  local_pet_friends.py  pet_friends_locator.md  pyproject.toml  repl_tests.py  script.py  test_selenium_petfriends.py
logs/: 5d669a16-2b5c-4705-bc44-6bf9ed4f622b.txt  e50d50f5-2416-41cd-9778-244f02fd2e94.txt
