[tool.poetry]
name = "repl_python3_Seleniumtesting"
version = "0.1.0"
description = ""
authors = ["jabooticaba <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
